Se agregan conexiones a la base de datos, clase nueva que permite llenar los combos de los 2 forms, se finaliza el form2 (consultarEliminar) permitiendo que este funcione e interactue correctamente con la base de datos)

--- a/Proyecto1Laboratorio-SosaFacundo/Proyecto1Laboratorio-SosaFacundo.csproj
+++ b/Proyecto1Laboratorio-SosaFacundo/Proyecto1Laboratorio-SosaFacundo.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="consultarEliminar.cs">
       <SubType>Form</SubType>
